CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(R3D)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(PkgConfig REQUIRED)

PKG_SEARCH_MODULE(GLFW REQUIRED glfw3)

INCLUDE_DIRECTORIES(inc)
INCLUDE_DIRECTORIES(ext/glew-1.13.0/include)
INCLUDE_DIRECTORIES(ext/lodepng/include)
INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIRS})

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DGLEW_STATIC -DGLEW_NO_GLU -std=c99 -g -Wall")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DGLEW_STATIC -DGLEW_NO_GLU -std=c++11 -g -Wall")
ADD_SUBDIRECTORY(ext/glew-1.13.0)
ADD_SUBDIRECTORY(ext/lodepng)

FILE(GLOB SRC_FILES
    "src/*.cpp"
)

ADD_EXECUTABLE(R3D ${SRC_FILES})
TARGET_LINK_LIBRARIES(R3D ${GLFW_LIBRARIES} ${GLFW_STATIC_LIBRARIES})
TARGET_LINK_LIBRARIES(R3D glew)
TARGET_LINK_LIBRARIES(R3D lodepng)
TARGET_LINK_LIBRARIES(R3D ${OPENGL_LIBRARIES})
TARGET_LINK_LIBRARIES(R3D dl)
